--- a/build.yaml
+++ b/build.yaml
@@ -18,3 +18,8 @@
 #     artifact-name: corne_left_with_studio
 #
 ---
+include:
+  - board: nrfmicro_11
+    shield: sofle_left
+  - board: nrfmicro_11
+    shield: sofle_right
