--- a/build.yaml
+++ b/build.yaml
@@ -23,3 +23,7 @@ include:
     shield: sofle_left
   - board: nrfmicro_11
     shield: sofle_right
+  - board: nice_nano_v2
+    shield: sofle_left1
+  - board: nice_nano_v2
+    shield: sofle_right1
