--- a/build.yaml
+++ b/build.yaml
@@ -19,7 +19,11 @@
 #
 ---
 include:
-  - board: nrfmicro_11
+  - board: nice_nano_v2
     shield: sofle_left
-  - board: nrfmicro_11
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
+  - board: nice_nano_v2
     shield: sofle_right
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
